--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,11 +1,11 @@
-@import '~bootstrap/scss/bootstrap';
-@import './abstracts/fonts';
-@import './abstracts/variables';
-@import './components/globals';
-@import './components/page1';
-@import './components/page2';
-@import './components/page3';
-@import './components/page4';
-@import './components/page5';
-@import './components/page6';
-@import './components/page7';
+@import "~bootstrap/scss/bootstrap";
+@import "./abstracts/fonts";
+@import "./abstracts/variables";
+@import "./components/globals";
+@import "./components/page1";
+@import "./components/page2";
+@import "./components/page3";
+@import "./components/page4";
+@import "./components/page5";
+@import "./components/page6";
+@import "./components/page7";
