--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $fittly-orange: #eba14a;
 $fittly-red: #d17f5c;
 $fittly-blue: #05a2ae;
+$fittly-darkblue: #06747c;
 $fittly-beige: #f2efea;
 $fittly-sand: #ded5c8;
 $fittly-dark-teal: #213638;
