--- a/src/assets/styles/components/_page5.scss
+++ b/src/assets/styles/components/_page5.scss
@@ -1,18 +1,29 @@
 .canDoWithFittly {
   padding-bottom: 80px;
-  background: url("../../img/bg_can_do.svg") top right no-repeat;
+  background: url("../../img/bg_can_do.svg") 73% top no-repeat;
 
   @media only screen and (max-width: 767px) {
     background: transparent;
+    padding-bottom: 0;
+  }
+
+  .demo {
+    max-width: 380px;
+
+    @media only screen and (max-width: 767px) {
+      max-width: 240px;
+      margin-top: 40px;
+    }
   }
 
   .title {
     font-family: "BrandonTextBold";
     font-weight: bold;
-    font-size: $fs48;
-    line-height: $fs64;
+    font-size: $fs64;
+    line-height: 72px;
     color: $fittly-neutral-black;
     margin-bottom: 60px;
+    margin-top: 120px;
 
     @media only screen and (max-width: 767px) {
       margin-top: 20px;
@@ -31,7 +42,7 @@
       border: 0;
       font-size: $fs14;
       letter-spacing: 2px;
-      padding: 30px 30px 10px 30px;
+      padding: 30px 30px 20px 30px;
       background-color: $fittly-beige;
     }
     .card-body {
