--- a/src/assets/styles/components/_page4.scss
+++ b/src/assets/styles/components/_page4.scss
@@ -1,40 +1,128 @@
+.mainContainerStep4 {
+  margin-top: 500px;
+
+  @media only screen and (max-width: 767px) {
+    margin-top: 50px;
+  }
+}
+
 .step4 {
-	margin-top: 135px;
-	margin-bottom: 135px;
+  position: relative;
+  top: -480px;
 
-	h2 {
-		font-family: 'BrandonTextBold';
-		font-size: $fs48;
-		line-height: 64px;
-		text-align: center;
-	}
+  @media only screen and (max-width: 767px) {
+    position: inherit;
+    top: 0;
+  }
 
-	&__item {
-		&--wrapper {
-			display: flex;
-			justify-content: center;
-			margin: 32px 0;
-			height: 200px;
-		}
+  h2 {
+    font-family: "BrandonTextBold";
+    font-size: $fs48;
+    line-height: 64px;
+    text-align: center;
 
-		& {
-			height: 100%;
-			width: 100%;
-			padding: 24px 31px;
-			border: none;
-			max-width: 330px;
-			max-height: 200px;
-			box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.07);
-			border-radius: 8px;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-		}
+    @media only screen and (max-width: 767px) {
+      font-size: $fs32;
+    }
+  }
 
-		&--title {
-			font-family: 'BrandonTextRegular';
-			font-size: $fs24;
-			line-height: 32px;
-		}
-	}
+  &__item {
+    &--wrapper {
+      display: flex;
+      justify-content: center;
+      margin: 32px 0;
+      height: 200px;
+    }
+
+    & {
+      height: 100%;
+      width: 100%;
+      padding: 24px 31px;
+      border: none;
+      max-width: 330px;
+      max-height: 200px;
+      box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.07);
+      border-radius: 8px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    &--title {
+      font-family: "BrandonTextRegular";
+      font-size: $fs24;
+      line-height: 32px;
+
+      @media only screen and (max-width: 767px) {
+        font-size: $fs18;
+      }
+    }
+  }
+}
+
+.orangeBG {
+  background: rgb(211, 131, 91);
+  background: linear-gradient(
+    0deg,
+    rgba(211, 131, 91, 1) 0%,
+    rgba(235, 187, 101, 1) 100%
+  );
+  height: 650px;
+
+  @media only screen and (max-width: 767px) {
+    height: auto;
+    padding-top: 40px;
+  }
+
+  h3 {
+    font-family: "BrandonTextBold";
+    font-weight: bold;
+    font-size: $fs48;
+    line-height: 72px;
+    color: $fittly-neutral-black;
+    margin-bottom: 40px;
+    text-align: center;
+
+    @media only screen and (max-width: 767px) {
+      margin-top: 40px;
+      padding-bottom: 10px;
+      font-size: $fs24;
+      line-height: inherit;
+    }
+  }
+
+  .formNewsletter {
+    position: relative;
+    top: -400px;
+
+    @media only screen and (max-width: 767px) {
+      position: inherit;
+      top: 0px;
+      padding-bottom: 40px;
+    }
+
+    .optionsCheck p {
+      color: #fff;
+      font-size: $fs14;
+      font-family: "Manrope", sans-serif;
+      font-weight: 400;
+
+      @media only screen and (max-width: 767px) {
+        padding-bottom: 20px;
+        font-size: $fs18;
+        text-align: center;
+
+        img {
+          margin-bottom: 10px;
+        }
+      }
+    }
+
+    .optionsCheck p img {
+      margin-right: 10px;
+    }
+    .containerForm {
+      padding-bottom: 60px;
+    }
+  }
 }
