--- a/src/assets/styles/components/_page3.scss
+++ b/src/assets/styles/components/_page3.scss
@@ -1,71 +1,112 @@
 $imgFactorX: 400px;
 $imgFactorY: 553px;
 
+.bgStep3 {
+  background: url("../../img/bg-step3.svg") top center no-repeat;
+  padding-top: 50px;
+  background-size: cover;
+
+  @media (max-width: 767px) {
+    background: transparent;
+  }
+
+  @media (min-width: 1441px) {
+    background-size: auto;
+  }
+}
+
 .step3 {
-	&__img {
-		margin-bottom: 62px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+  &__img {
+    margin-bottom: 62px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-		&--img {
-			background: url('../../img/girl-jumping.png');
-			width: $imgFactorX * 1.2;
-			height: $imgFactorY * 1.2;
-			background-size: cover;
+    &--img {
+      background: url("../../img/girl-jumping.png");
+      width: $imgFactorX * 1;
+      height: $imgFactorY * 1;
+      background-size: cover;
 
-			@media (min-width: 768px) {
-				width: $imgFactorX * 0.6;
-				height: $imgFactorY * 0.6;
-			}
+      @media (min-width: 768px) {
+        width: $imgFactorX * 0.6;
+        height: $imgFactorY * 0.6;
+      }
 
-			@media (min-width: 1024px) {
-				width: $imgFactorX * 0.8;
-				height: $imgFactorY * 0.8;
-			}
+      @media (min-width: 1024px) {
+        width: $imgFactorX * 0.8;
+        height: $imgFactorY * 0.8;
+      }
 
-			@media (min-width: 1200px) {
-				width: $imgFactorX * 1;
-				height: $imgFactorY * 1;
-			}
-		}
-		@media (min-width: 768px) {
-			justify-content: start;
-		}
-	}
+      @media (min-width: 1200px) {
+        width: $imgFactorX * 1;
+        height: $imgFactorY * 1;
+      }
+    }
+    @media (min-width: 768px) {
+      justify-content: start;
+    }
+  }
 
-	@media (min-width: 768px) {
-		margin-bottom: 135px;
-	}
+  @media (min-width: 768px) {
+    margin-bottom: 135px;
+  }
 
-	&__text {
-		&--container {
-			h2 {
-				font-family: 'BrandonTextBold';
-				font-size: $fs44;
-				line-height: 60px;
-			}
-		}
+  &__text {
+    &--container {
+      h2 {
+        font-family: "BrandonTextBold";
+        font-size: $fs44;
+        line-height: 60px;
 
-		& {
-			display: flex;
-		}
+        @media (max-width: 767px) {
+          text-align: center;
+          margin-bottom: 40px;
+        }
+      }
+    }
 
-		&--item {
-			width: 100%;
-			border-left: 1px solid $fittly-orange;
-			display: flex;
-			align-items: space-between;
-			min-height: 56px;
-			margin-top: 62px;
+    & {
+      display: flex;
+    }
 
-			p {
-				color: $fittly-dark-teal;
-				font-size: $fs18;
-				font-family: 'BrandonTextBold';
-				padding-left: 34px;
-				padding-right: 34px;
-			}
-		}
-	}
+    &--item {
+      width: 100%;
+      border-left: 1px solid $fittly-orange;
+      display: flex;
+      align-items: space-between;
+      min-height: 56px;
+      margin-top: 62px;
+
+      @media (max-width: 767px) {
+        border-left: 0;
+        min-height: 0;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        ::before {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 1px;
+          width: 80px;
+          border-top: 1px solid $fittly-orange;
+          left: calc(50% - 40px);
+        }
+      }
+
+      p {
+        color: $fittly-dark-teal;
+        font-size: $fs18;
+        font-family: "BrandonTextBold";
+        padding-left: 34px;
+        padding-right: 34px;
+
+        @media (max-width: 767px) {
+          width: 100%;
+          text-align: center;
+        }
+      }
+    }
+  }
 }
